--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,5 +1,5 @@
 @mixin shadow {
-    -webkit-filter: drop-shadow(-7px 3px 3px rgba(0,0,0,0.35));
+  -webkit-filter: drop-shadow(-7px 3px 3px rgba(0,0,0,0.35));
   filter: drop-shadow(-7px 3px 3px rgba(0,0,0,0.35));
 }
 
@@ -18,13 +18,13 @@ html, body {
   background-size: calc(100% + 50px);
 }
 
-#main{
+#main {
   position: relative;
   z-index: 100;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-#girl, .icons img {
+#girl, .icons img, .show img {
   @include shadow;
 }
