--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -26,7 +26,7 @@ title: Robinina.art
                 = image_tag 'email.png', class: 'img-fluid', alt: 'Email'
           .row.show.mt-5
             .col-12
-              = link_to 'https://www.etsy.com/shop/Robinina', title: 'Custom art for sale' do
-                = image_tag 'art-for-sale.jpg', class: 'img-fluid', alt: 'Custom art for sale'
+              = link_to 'https://www.instagram.com/robinina' do
+                = image_tag 'trunk-show-2018.jpg', class: 'img-fluid', alt: 'Robinina open house and trunk show, November 13, text 941-586-4731 for address'
     .col-md-6.col-12.order-2.order-md-1.mt-5.mt-md-0
       = image_tag 'girl.png', id: 'girl', class: 'img-fluid', alt: ''
